@@ -619,7 +619,7 @@ static void
 _im_chooser_simple_update_im_list(IMChooserSimple *im)
 {
 	GtkListStore *list;
-	GtkTreeIter iter, *cur_iter = NULL, *def_iter = NULL, *first_iter = NULL;
+	GtkTreeIter iter, *cur_iter = NULL, *def_iter = NULL;
 	GtkTreePath *path;
 	GtkTreeViewColumn *column;
 	GtkRequisition requisition;
@@ -668,10 +668,7 @@ _im_chooser_simple_update_im_list(IMChooserSimple *im)
 				   -1);
 		g_string_free(string, TRUE);
 	}
-	if (cur_iter == NULL && def_iter == NULL) {
-		cur_iter = first_iter;
-		first_iter = NULL;
-	} else if (cur_iter == NULL) {
+	if (cur_iter == NULL) {
 		cur_iter = def_iter;
 		def_iter = NULL;
 	}
@@ -684,8 +681,6 @@ _im_chooser_simple_update_im_list(IMChooserSimple *im)
 		gtk_tree_iter_free(cur_iter);
 		g_signal_emit_by_name(column, "clicked", 0, NULL);
 	}
-	if (first_iter)
-		gtk_tree_iter_free(first_iter);
 	if (def_iter)
 		gtk_tree_iter_free(def_iter);
 	g_object_unref(list);
